Applications/Mailrise/base/resources/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: mailrise
  labels:
    reloader.stakater.com/reload: 'enabled'
